--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
   <h1>Auto Bet Controls</h1>
   <button id="start">Start Auto Bet</button>
   <button id="stop">Stop Auto Bet</button>
-  <h2>Bet Count: <span id="betCount">Loading...</span></h2> <!-- Display bet count here -->
+  <!-- <h2>Bet Count: <span id="betCount">Loading...</span></h2> Display bet count here -->
   <script src="popup.js"></script>
 </body>
 </html>
